fix scrollbar when one's weapons are opened

--- a/src/styles.css
+++ b/src/styles.css
@@ -147,7 +147,7 @@ button {
   display: block;
   margin-bottom: auto;
 }
-.tab-panel > .search-bar {
+.search-bar {
   padding: 0.5em;
   width: -webkit-fill-available;
 }
